Fixed - Flickering issue when scroll

--- a/style.scss
+++ b/style.scss
@@ -165,9 +165,9 @@ main {
 .reveal-text {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 150%;
   background: #17181a;
-  top: 0;
+  top: -15%;
   left: 0;
 }
 
